--- a/airline-android/app/build.gradle
+++ b/airline-android/app/build.gradle
@@ -23,6 +23,10 @@ android {
         }
     }
 
+    dataBinding {
+        enabled = true
+    }
+
     buildFeatures{
         viewBinding true
     }
