--- a/airline-android/app/src/main/AndroidManifest.xml
+++ b/airline-android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.Airline"
         tools:targetApi="31">
         <activity
+            android:name=".Help"
+            android:exported="false" />
+        <activity
             android:name=".DisplayAirline"
             android:exported="false" />
         <activity
